--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(105,6,6,1) 9%, rgba(20
 
 
         <div class="workContainer">
-            <label for="yearsOfWork">¿Cuántos años trabajarás en tu vida (aproximado)?</label>
+            <label for="yearsOfWork">¿Cuántos años trabajaste o trabajarás en tu vida (aproximado)?</label>
             <input type="number" id="yearsOfWork" value="40" min="0">
 
             <label for="horasTrabajo">¿Cuántas horas trabajas al día (en promedio)?</label>
